[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/LevelSelection.gd" type="Script" id=1]
[ext_resource path="res://Resources/UI/MainPanel01.png" type="Texture" id=2]
[ext_resource path="res://LevelSelection/LevelCard.tscn" type="PackedScene" id=3]
[ext_resource path="res://Resources/Fonts/LevelSelectionFont.tres" type="DynamicFont" id=4]

[node name="LevelSelection" type="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
region_rect = Rect2( 23, 2, 814, 511 )
patch_margin_left = 50
patch_margin_top = 40
patch_margin_right = 50
patch_margin_bottom = 40
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = 60.0
margin_right = -70.0
margin_bottom = -60.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1140.0
margin_bottom = 196.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Label" type="Label" parent="VBoxContainer/Control"]
margin_left = 346.0
margin_top = 85.0
margin_right = 793.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 4 )
text = "please select the next destination"
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 200.0
margin_right = 1140.0
margin_bottom = 600.0
size_flags_vertical = 9
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card1" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 38.0
margin_right = 338.0
margin_bottom = 400.0

[node name="Card2" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 419.0
margin_right = 719.0
margin_bottom = 400.0

[node name="Card3" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 801.0
margin_right = 1101.0
margin_bottom = 400.0

[connection signal="gui_input" from="VBoxContainer/HBoxContainer/Card1" to="." method="_on_Card1_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/Card2" to="." method="_on_Card2_gui_input"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer/Card3" to="." method="_on_Card3_gui_input"]
